# NDSP

./: Cargo.toml  LICENSE  README.md  RELEASES.md  ROADMAP.md
.github/workflows/: rust.yml
src/: cfunc.rs  complex.rs  cvfunc.rs  fixed.rs  func.rs  lib.rs  main.rs  mat.rs  nd_complex.rs  nd_vector.rs  ndsp.rs  numeric.rs  real.rs  sfunc.rs  traits.rs  vec.rs  vector.rs  vector_ops.rs  vfunc.rs
src/fixed/: complex.rs  real.rs
src/real/: fixed.rs
src/vec/: complex.rs  math_impl.rs  ops.rs  plot.rs  real.rs  window.rs
src/vec/complex/: fft.rs  ops.rs
src/vec/real/: ops.rs
tests/: fft_plot.rs  ops_tets.rs  test_plot.rs
