#----------------------#
# Norsk Datateknikk AS #
#----------------------#

[package]
name = "ndsp"
version = "0.2.0"
authors = ["Erik Buer"]
edition = "2021"
description = "A package for Rust DSP."
readme = "README.md"
repository = "https://github.com/norsk-datateknikk/NDSP"
license-file = "LICENSE"
keywords = ["dsp", "radio", "audio", "no_std"]
exclude = ["figures/"]

[lib]
path  = "src/lib.rs"
bench = false
doc   = true
test  = true
crate-type = ["lib"]

[dependencies]
mixed-num          = "^0.5.5"
fixed              = "^1.13"

plotters           = {version ="^0.3.1", optional=true }

[dependencies.num]
version = "^0.4"
default-features = false

[dev-dependencies]
plotters = "^0.3.1"

[features]
default = []
std  = ["plotters"]
